Update navigation links to use "Portfolio" instead of "Projects"

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="about.html">About</a>
                 <a href="skills.html">Skills</a>
-                <a href="portfolio.html">Projects</a>
+                <a href="portfolio.html">Portfolio</a>
                 <a href="experience.html">Experience</a>
             </nav>
         </header>
@@ -47,22 +47,6 @@
         </div>
 
         <main>
-            <!-- Pixel Stats Panel -->
-            <div class="pixel-stats">
-                <div class="pixel-stat-item">
-                    <span class="pixel-stat-value" data-target="5">0</span>
-                    <span class="pixel-stat-label">FINDINGS</span>
-                </div>
-                <div class="pixel-stat-item">
-                    <span class="pixel-stat-value" data-target="8">0</span>
-                    <span class="pixel-stat-label">PROJECTS</span>
-                </div>
-                <div class="pixel-stat-item">
-                    <span class="pixel-stat-value" data-target="15">0</span>
-                    <span class="pixel-stat-label">SKILLS</span>
-                </div>
-            </div>
-
             <section class="hero">
                 <div class="hero-text">
                     <h1>Rafli Permana Putra</h1>
