--- a/projects/bootcamp.html
+++ b/projects/bootcamp.html
@@ -23,14 +23,14 @@
             <a href="../index.html">Home</a>
             <a href="../about.html">About</a>
             <a href="../skills.html">Skills</a>
-            <a href="../portfolio.html" class="active">Projects</a>
+            <a href="../portfolio.html" class="active">Portfolio</a>
             <a href="../experience.html">Experience</a>
         </nav>
     </header>
 
     <main class="container">
         <a href="../portfolio.html" class="back-link">
-            ← Back to Projects
+            ← Back to Portfolio
         </a>
         <section class="project-header">
             <span class="card-type type-project">PROJECT</span>
