--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <a href="index.html">Home</a>
             <a href="about.html" class="active">About</a>
             <a href="skills.html">Skills</a>
-            <a href="portfolio.html">Projects</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="experience.html">Experience</a>
         </nav>
     </header>
