--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="skills.html">Skills</a>
-            <a href="portfolio.html">Projects</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="experience.html" class="active">Experience</a>
         </nav>
     </header>
