Add featured project section

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,17 @@
 
             <div class="projects-grid" id="projects-section">
 
+                <!-- Bootcamp Final Project: Offensive Phase -->
+                <div class="reveal" data-stagger data-category="projects">
+                    <a href="https://drive.google.com/placeholder" target="_blank" rel="noopener noreferrer" class="project-card featured">
+                        <span class="card-type type-featured">FEATURED PROJECT</span>
+                        <h3>Bootcamp Final Project: Offensive</h3>
+                        <p>
+                            Comprehensive final project from intensive bootcamp training. Includes detailed report, presentation, and hands-on demonstration of advanced penetration testing methodologies.
+                        </p>
+                    </a>
+                </div>
+
                 <!-- Bug Bounty & VDP Participation -->
                 <div class="reveal" data-stagger data-category="projects achievement">
                     <a href="projects/bug-bounty.html" class="project-card">
