Update names across multiple pages to include full name "Rafli Permana"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Rafli — Penetration Tester</title>
+    <title>Rafli Permana — Penetration Tester</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Penetration tester and Computer Science student at BINUS University. Specializing in offensive security, web application testing, and vulnerability assessment.">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -49,7 +49,7 @@
         <main>
             <section class="hero">
                 <div class="hero-text">
-                    <h1>Rafli Permana Putra</h1>
+                    <h1>Rafli Permana</h1>
                     <div class="hero-role">
                         <span id="typed-text"></span><span class="typewriter-cursor"></span>
                     </div>
@@ -59,7 +59,7 @@
                         View Projects
                     </a>
 
-                    <a href="assets/cv/Rafli_Permana_Putra_CV.pdf" class="btn btn-secondary" download>
+                    <a href="assets/cv/Rafli_Permana_CV.pdf" class="btn btn-secondary" download>
                         Download CV
                     </a>
                 </div>
