--- a/skills.html
+++ b/skills.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Skills — Rafli</title>
+    <title>Skills — Rafli Permana</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore Rafli's technical skills in offensive security, web application testing, Linux system internals, and cybersecurity fundamentals.">
+    <meta name="description" content="Explore Rafli Permana's technical skills in offensive security, web application testing, Linux system internals, and cybersecurity fundamentals.">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
