--- a/projects/bug-bounty.html
+++ b/projects/bug-bounty.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bug Bounty & VDP Participation — Rafli</title>
+    <title>Bug Bounty & VDP Participation — Rafli Permana</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
