Update skills section

--- a/skills.html
+++ b/skills.html
@@ -87,31 +87,17 @@
 
                 <div class="skill-tags">
                     <span class="skill-tag">C Programming</span>
-                    <span class="skill-tag">Basic Memory Safety Awareness</span>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Flask</span>
+                    <span class="skill-tag">FastAPI</span>
+                    <span class="skill-tag">Bash Scripting</span>
                     <span class="skill-tag">HTML & CSS</span>
-                    <span class="skill-tag">JavaScript Fundamentals</span>
-                    <span class="skill-tag">Shell Scripting</span>
+                    <span class="skill-tag">JavaScript</span>
+                    <span class="skill-tag">PostgreSQL</span>
+                    <span class="skill-tag">Redis</span>
+                    <span class="skill-tag">Containerization & Virtualization</span>
                     <span class="skill-tag">Git & Version Control</span>
-                    <span class="skill-tag">Linux CLI Tooling</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="container">
-            <!-- Learning & Practice -->
-            <div class="skills-section">
-                <h2>Learning & Practice</h2>
-                <p>
-                    How I actively develop my skills through continuous practice
-                    and hands-on experimentation rather than theory alone.
-                </p>
-
-                <div class="skill-tags">
-                    <span class="skill-tag">Self-directed Learning</span>
-                    <span class="skill-tag">Hands-on Labs</span>
-                    <span class="skill-tag">Documentation-driven Study</span>
-                    <span class="skill-tag">Problem Decomposition</span>
-                    <span class="skill-tag">Failure Analysis</span>
+                    <span class="skill-tag">Linux/Kali Linux</span>
                 </div>
             </div>
         </section>
