Update the portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 
                 <!-- Bootcamp Final Project: Offensive Phase -->
                 <div class="reveal" data-stagger data-category="projects">
-                    <a href="https://drive.google.com/placeholder" target="_blank" rel="noopener noreferrer" class="project-card featured">
+                    <a href="https://drive.google.com/drive/folders/19j1zQ7yIr2pKuWUJ5IvmoqA6Yl1lr0tU?usp=sharing" target="_blank" rel="noopener noreferrer" class="project-card featured">
                         <span class="card-type type-featured">FEATURED PROJECT</span>
                         <h3>Bootcamp Final Project: Offensive</h3>
                         <p>
@@ -73,21 +73,9 @@
                     </a>
                 </div>
 
-                <!-- Bootcamp Projects -->
-                <div class="reveal" data-stagger data-category="projects achievement">
-                    <a href="projects/bootcamp.html" class="project-card">
-                        <span class="card-type type-project">PROJECT</span>
-                        <h3>Cyber Security Bootcamp</h3>
-                        <p>
-                            Hands-on projects during intensive cyber security bootcamp training,
-                            covering web vulnerabilities, penetration testing, and security assessments.
-                        </p>
-                    </a>
-                </div>
-
                 <!-- Medium Writeup 1 -->
                 <div class="reveal" data-stagger data-category="article">
-                    <a href="https://medium.com/@imraflip/your-writeup-1" target="_blank" rel="noopener noreferrer" class="project-card">
+                    <a href="https://medium.com/@imraflip/exploiting-eternalblue-in-a-lab-environment-da1ce2ef6651" target="_blank" rel="noopener noreferrer" class="project-card">
                         <span class="card-type type-article">ARTICLE</span>
                         <h3>EternalBlue Exploitation Writeup</h3>
                         <p>
@@ -99,12 +87,12 @@
 
                 <!-- GitHub Project 1 -->
                 <div class="reveal" data-stagger data-category="code">
-                    <a href="https://github.com/imraflip/your-repo-1" target="_blank" rel="noopener noreferrer" class="project-card">
+                    <a href="https://github.com/imraflip/security-automation-scripts" target="_blank" rel="noopener noreferrer" class="project-card">
                         <span class="card-type type-code">CODE</span>
                         <h3>Security Automation Scripts</h3>
                         <p>
-                            Collection of Python scripts for automating security testing tasks,
-                            including reconnaissance, vulnerability scanning, and report generation.
+                            Collection of Bash scripts for automating security testing tasks,
+                            including reconnaissance and vulnerability scanning.
                         </p>
                     </a>
                 </div>
@@ -112,10 +100,9 @@
             </div>
 
             <!-- Achievements -->
-            <!-- Achievement 1 -->
             <div class="achievements-section" id="achievements-section">
                 <div class="achievements-grid">
-                    <!-- Python for Everybody -->
+                    <!-- Achievement 1 -->
                     <div class="reveal" data-stagger>
                         <a href="https://www.coursera.org/account/accomplishments/professional-cert/certificate/C2XNVN0WIK3X" target="_blank" rel="noopener noreferrer" class="achievement-card label-right">
                             <div class="achievement-image-wrapper">
@@ -125,6 +112,20 @@
                             <div class="achievement-content">
                                 <h3>Google IT Support Professional Certificate</h3>
                                 <p class="achievement-meta">Coursera | Google</p>
+                            </div>
+                        </a>
+                    </div>
+
+                    <!-- Achievement 2 -->
+                    <div class="reveal" data-stagger>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/certificate/C2XNVN0WIK3X" target="_blank" rel="noopener noreferrer" class="achievement-card label-right">
+                            <div class="achievement-image-wrapper">
+                                <span class="card-type type-achievement">ACHIEVEMENT</span>
+                                <img src="assets/img/thm-jr-pentester.jpg" alt="THM Junior Pentester Certificate" class="achievement-image">
+                            </div>
+                            <div class="achievement-content">
+                                <h3>THM Junior Pentester Certificate</h3>
+                                <p class="achievement-meta">TryHackMe</p>
                             </div>
                         </a>
                     </div>
